--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -545,13 +545,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# TODO: Import 'make_scorer', 'DecisionTreeRegressor', and 'GridSearchCV'\n",
+    "from sklearn.metrics import make_scorer\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.grid_search import GridSearchCV\n",
     "\n",
     "def fit_model(X, y):\n",
     "    \"\"\" Performs grid search over the 'max_depth' parameter for a \n",
@@ -561,20 +564,21 @@
     "    cv_sets = ShuffleSplit(X.shape[0], n_iter = 10, test_size = 0.20, random_state = 0)\n",
     "\n",
     "    # TODO: Create a decision tree regressor object\n",
-    "    regressor = None\n",
+    "    regressor = DecisionTreeRegressor(random_state=0)\n",
     "\n",
     "    # TODO: Create a dictionary for the parameter 'max_depth' with a range from 1 to 10\n",
-    "    params = {}\n",
+    "    params = {'max_depth': list(range(1,11))}\n",
+    "    \n",
     "\n",
     "    # TODO: Transform 'performance_metric' into a scoring function using 'make_scorer' \n",
-    "    scoring_fnc = None\n",
+    "    scoring_fnc = make_scorer(performance_metric)\n",
     "\n",
     "    # TODO: Create the grid search object\n",
-    "    grid = None\n",
-    "\n",
+    "    grid = GridSearchCV(regressor, params, scoring=scoring_fnc, cv=cv_sets)\n",
+    "    \n",
     "    # Fit the grid search object to the data to compute the optimal model\n",
     "    grid = grid.fit(X, y)\n",
-    "\n",
+    "    \n",
     "    # Return the optimal model after fitting the data\n",
     "    return grid.best_estimator_"
    ]
@@ -599,12 +603,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter 'max_depth' is 4 for the optimal model.\n"
+     ]
+    }
+   ],
    "source": [
     "# Fit the training data to the model using grid search\n",
     "reg = fit_model(X_train, y_train)\n",
@@ -617,7 +629,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "\n",
+    "The result is exactly what I expected, max depth = 4 is the most optimal."
    ]
   },
   {
@@ -640,11 +654,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted selling price for Client 1's home: $324,240.00\n",
+      "Predicted selling price for Client 2's home: $189,123.53\n",
+      "Predicted selling price for Client 3's home: $942,666.67\n"
+     ]
+    }
+   ],
    "source": [
     "# Produce a matrix for client data\n",
     "client_data = [[5, 34, 15], # Client 1\n",
